<resources>
    <string name="app_name">Pharmacy</string>

    <string name="drawer_item_profile">Profile</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_medicine">Medicine</string>
    <string name="drawer_item_instructions">Instructions</string>
    <string name="drawer_item_cart">Cart</string>
    <string name="drawer_item_subscriptions">Subscriptions</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="my_cart">My cart</string>
    <string name="my_subscriptions">My subscriptions</string>
    <string name="my_orders">My orders</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to username -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Login or password is invalid</string>
    <string name="error_invalid_password">Login or password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="pharmacy_catalog">Pharmacy Catalog</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="about">About</string>
    <string name="about_you">About</string>
    <string name="age">Age</string>
    <string name="sign_up">Sign up</string>
    <string name="field_required">This field is required</string>
    <string name="incorrect">Incorrect password or email</string>
    <string name="unable_to_login">Unable to login</string>
    <string name="add_medicine">Add medicine</string>
    <string name="gender">Gender</string>
    <string name="delete_medicine">Delete medicine</string>
    <string name="deleting_medicine">Deleting medicine</string>
    <string name="confirm_delete_medicine">Are you sure you want to delete medicine?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="med_deleted">Medicine was deleted</string>
    <string name="fill_the_fields_to_sign_up">Fill the fields to sign up</string>
    <string name="fill_medicine">Fill the fields to add medicine</string>
    <string name="tap_to_login">Tap to login</string>
    <string name="consist">CONSIST</string>
    <string name="state">STATE</string>
    <string name="dosing">DOSING</string>
    <string name="contradictions">CONTRADICTIONS</string>
    <string name="gram_in_one">GRAM IN ONE</string>
    <string name="quantity">QUANTITY</string>
    <string name="exp_date">EXPIRATION DATE</string>
    <string name="cost">COST</string>
    <string name="about_medicine">ABOUT</string>
    <string name="name_medicine">NAME</string>
    <string name="invalid_date">Invalid format! MM/dd/yyyy</string>
    <string name="unable_add_medicine">Unable to add medicine</string>
    <!--Add medicine-->
    <string name="consist_add">Consist</string>
    <string name="state_add">State</string>
    <string name="dosing_add">Dosing</string>
    <string name="contradictions_add">Contradictions</string>
    <string name="gram_in_one_add">Gram in one</string>
    <string name="quantity_add">Quantity</string>
    <string name="exp_date_add">Expiration date</string>
    <string name="cost_add">Cost</string>
    <string name="about_medicine_add">About</string>
    <string name="name_medicine_add">Medicine name</string>
    <string name="processing">Processing…</string>
    <string name="signing_up">Signing up…</string>
    <string name="username">Username</string>
    <string name="password_not_match">Password doesn\'t match</string>
    <string name="not_match">doesn\'t match</string>
    <string name="cant_sign_up">Can\'t sign up</string>
    <string name="loading">Loading…</string>
    <string name="enable_load_cart">Enable to load cart</string>
    <string name="medicine_removed_cart">Medicine removed from cart</string>
    <string name="error_removing">Error while removing</string>
    <string name="not_logged_in">You\'re not logged in</string>
    <string name="medicine_added_cart">Medicine added to cart</string>
    <string name="medicine_in_cart">Medicine already in the cart</string>
    <string name="signing_in">Signing in…</string>
    <string name="personal_information">Personal information</string>
    <string name="enable_clear_basket">Enable to clear basket</string>
    <string name="subscribed">Subscribed to medicine</string>
    <string name="unsubscribed">You\'re successfully unsubscribed</string>
    <string name="order">Confirm order</string>
    <string name="confirmed">Order has been confirmed</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="your_order">Your order:</string>
    <string name="confirm_order">Confirm order?</string>
    <string name="total">Total:</string>
    <string name="empty_cart">Cart is empty</string>
    <string name="empty_instructions">Instructions list is empty</string>
    <string name="empty_medicine">Medicine list is empty</string>
    <string name="empty_subs">No subscriptions</string>


</resources>
