<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/drawer_item_profile" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/drawer_item_cart" />

        <item
            android:id="@+id/nav_subscriptions"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/drawer_item_subscriptions" />

    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_medicine"
            android:icon="@drawable/ic_local_hospital_black_24dp"
            android:title="@string/drawer_item_medicine" />

        <item
            android:id="@+id/nav_instructions"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/drawer_item_instructions" />
    </group>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/drawer_item_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/drawer_item_about" />
    </group>

</menu>